--- a/codewars.html
+++ b/codewars.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="codewars.js"></script>
+    <script src="20220822.js"></script>
 </body>
 </html>
